@@ -21,3 +21,4 @@ require 'active_merchant/billing/gateways/psl_card'
 require 'active_merchant/billing/gateways/quickpay'
 require 'active_merchant/billing/gateways/realex'
 require 'active_merchant/billing/gateways/secure_pay'
+require 'active_merchant/billing/gateways/trans_first'
